--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "glif",
+  "description": "Application that allows you to create and download customizable QR codes",
   "type": "module",
   "private": true,
   "version": "0.1.0",
   "license": "MIT",
-  "author": "Domenico Tenace",
+  "authors": [
+    "Domenico Tenace",
+    "botprzemek"
+  ],
   "scripts": {
     "build": "nuxt build",
     "dev": "nuxt dev",
@@ -13,21 +17,14 @@
     "postinstall": "nuxt prepare",
     "preview-test": "nuxt build && nuxt preview"
   },
-  "dependencies": {
-    "@heroicons/vue": "^2.2.0",
-    "@pinia/nuxt": "^0.11.2",
-    "@vite-pwa/nuxt": "1.0.4",
-    "firebase": "^12.2.1",
-    "nuxt": "^4.0.3",
-    "pinia": "^3.0.3",
-    "qrcode.vue": "^3.6.0",
-    "vue": "^3.5.20",
-    "vue-router": "^4.5.1"
-  },
   "devDependencies": {
-    "@nuxtjs/tailwindcss": "^6.14.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.0"
+    "@nuxt/fonts": "^0.11.4",
+    "@tailwindcss/vite": "^4.1.14",
+    "@vite-pwa/nuxt": "^1.0.6",
+    "nuxt": "^4.1.3",
+    "qrcode.vue": "^3.6.0",
+    "tailwindcss": "^4.1.14",
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   }
 }
