--- a/package.json
+++ b/package.json
@@ -14,15 +14,25 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "preview-test": "nuxt build && nuxt preview"
+    "preview-test": "nuxt build && nuxt preview",
+    "test": "vitest",
+    "test:watch": "vitest --watch",
+    "test:ui": "vitest --ui",
+    "test:coverage": "vitest --coverage"
   },
   "devDependencies": {
     "@nuxt/fonts": "^0.11.4",
+    "@nuxt/test-utils": "^3.21.0",
     "@tailwindcss/vite": "^4.1.15",
     "@vite-pwa/nuxt": "^1.0.7",
+    "@vitest/coverage-v8": "^4.0.15",
+    "@vitest/ui": "^4.0.15",
+    "@vue/test-utils": "^2.4.6",
+    "happy-dom": "^20.0.11",
     "nuxt": "^4.1.3",
     "qrcode.vue": "^3.6.0",
     "tailwindcss": "^4.1.15",
+    "vitest": "^4.0.15",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
   }
