--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
     "vitest": "^4.0.15",
     "vue": "^3.5.22",
     "vue-router": "^4.6.3"
+  },
+  "dependencies": {
+    "easy-kit-utils": "^1.0.0"
   }
 }
